<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hacareem.finaldestination.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btnRideNow"
        style="@style/PrimaryButton"
        android:text="@string/pick_location"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/layoutAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@android:color/white"
        android:layout_above="@id/btnRideNow"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layoutPickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtPickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/SmallTitleTextGreen"
                android:text="@string/pick_up" />
            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AddressStyle"
                android:text="@string/default_dropoff_placeholder"
                android:layout_below="@id/txtPickup"
                android:layout_marginEnd="30dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutDropoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">
            <TextView
                android:id="@+id/txtDropoff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/SmallTitleTextGreen"
                android:text="@string/drop_off"
                android:paddingTop="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_drop_off_title" />
            <TextView
                android:id="@+id/txtAddressDropOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AddressStyle"
                android:text="@string/default_dropoff_placeholder"
                android:layout_below="@id/txtDropoff"
                android:layout_marginEnd="30dp" />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="0dp"
                android:layout_alignTop="@id/txtDropoff"
                android:layout_alignBottom="@id/txtAddressDropOff"
                android:scaleType="centerInside"
                android:src="@drawable/icon_arrow"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/content_desc_right_arrow" />
        </RelativeLayout>

    </LinearLayout>

    <!--<RelativeLayout
        android:id="@+id/layoutAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@android:color/white"
        android:layout_above="@id/btnRideNow">

        <TextView
            android:id="@+id/txtPickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SmallTitleTextGreen"
            android:text="@string/pick_up"/>
        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AddressStyle"
            tools:text="@string/location_title_default"
            android:layout_below="@id/txtPickup"/>

        <TextView
            android:id="@+id/txtDropoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SmallTitleTextGreen"
            android:text="@string/drop_off"
            android:paddingTop="5dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_below="@id/txtAddress"
            android:background="@drawable/bg_drop_off_title" />
        <TextView
            android:id="@+id/txtAddressDropOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AddressStyle"
            android:text="@string/default_dropoff_placeholder"
            android:visibility="gone"
            android:layout_below="@id/txtDropoff"
            android:layout_marginEnd="30dp"
            tools:visibility="visible"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="0dp"
            android:layout_alignTop="@id/txtDropoff"
            android:layout_alignBottom="@id/txtAddressDropOff"
            android:scaleType="centerInside"
            android:src="@drawable/icon_arrow"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_desc_right_arrow" />
    </RelativeLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@id/layoutAddress">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <View
            android:id="@+id/centerView"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/centerView"
            android:src="@drawable/icon_marker"
            android:contentDescription="@string/content_desc_marker" />
    </RelativeLayout>
</RelativeLayout>
